--- a/cc.html
+++ b/cc.html
@@ -31,7 +31,7 @@ International Conference on Emerging Trends in Engineering & Technology on Infor
 											<h3 style="margin:0 0 0.5em 0">
 											International Conference on Emerging Trends in Engineering & Technology on Information Security and Analytics
 										</h3><p style="margin:0 0 0.75em 0; color:#f56a6a">Department of Computer Science & Engineering | G. H. Raisoni College of Engineering, Nagpur, India</p>
-										<i><p><b>01-02 June 2018</b></p></i>
+										<p><b>01-02 June 2018</b></p>
 
 										<hr>
 										<h3>CONFERENCE COMMITTEE</h3>
@@ -51,7 +51,7 @@ International Conference on Emerging Trends in Engineering & Technology on Infor
 
 	<strong>General Chair</strong>
 			</p>
-			<p>Prof. A. Thomas (9822222544) GHRCE<br>
+			<p>Prof. A. Thomas GHRCE<br>
 	Dr. Amit Kumar , Bioaxis DNA Research Centre Pvt Ltd
 
 			</p>
@@ -64,14 +64,14 @@ International Conference on Emerging Trends in Engineering & Technology on Infor
 
 	<strong>Program Chair</strong>
 			</p>
-			<p>Prof.V. Gulhane (9822273858) GHRCE<br>
-	Prof. U. P. Sakhare (8983272294) GHRCE
+			<p>Prof.V. Gulhane GHRCE<br>
+	Prof. U. P. Sakhare GHRCE
 <!--	Prof. S. U. Nimbhorkar, GHRCE--><br><br>
 
 
 	<strong>Registration & Finance Chair</strong>
 			</p>
-			<p>Prof. S. Nimbhorkar (9881713143), GHRCE<br>
+			<p>Prof. S. Nimbhorkar GHRCE<br>
 
 	</p>
 
@@ -253,7 +253,7 @@ International Conference on Emerging Trends in Engineering & Technology on Infor
 										<li><a href="cc.html">Conference Committee</a></li>
 										<li><a href="reg.html">Registration</a></li>
 										<li><a href="progs.html">Program Schedule</a></li>
-										<li><a href="cn.html">Conference News</a></li>
+
 										<li><a href="venue.html">Venue</a></li>
 										<li><a href="tat.html">Travel and Tourism</a></li>
 										<li><a href="visainfo.html">VISA Information</a></li>
@@ -296,7 +296,7 @@ International Conference on Emerging Trends in Engineering & Technology on Infor
 									<header class="major">
 										<h2>Get in touch</h2>
 									</header>
-									<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+
 									<ul class="contact">
 										<li class="fa-envelope-o"><a href="#">achamma.thomas@raisoni.net</a><br>
 										<a href="#">veena.gulhane@raisoni.net</a></li>
@@ -309,7 +309,8 @@ Nagpur-440016, Maharashtra, INDIA.</li>
 
 							<!-- Footer -->
 								<footer id="footer">
-									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+									<p class="copyright">Department of Computer Science & Engineering <br>
+© Copyright 2018. All rights reserved.</p>
 								</footer>
 
 						</div>
