--- a/cfp.html
+++ b/cfp.html
@@ -31,7 +31,7 @@ International Conference on Emerging Trends in Engineering & Technology on Infor
 											<h3 style="margin:0 0 0.5em 0">
 											International Conference on Emerging Trends in Engineering & Technology on Information Security and Analytics
 										</h3><p style="margin:0 0 0.75em 0; color:#f56a6a">Department of Computer Science & Engineering | G. H. Raisoni College of Engineering, Nagpur, India</p>
-										<i><p><b>01-02 June 2018</b></p></i>
+										<p><b>01-02 June 2018</b></p>
 
 										<hr>
 										<h3>CALL FOR PAPERS</h3>
@@ -41,9 +41,7 @@ International Conference on Emerging Trends in Engineering & Technology on Infor
 									</header>
 
 										<p>The conference will bring together experts from the information security and information Analytics to discuss the timely issue of information security and Analytics. This will provide a forum for sharing insights, experiences and interaction on various aspects of evolving technologies and patterns related to Computer Science. Authors are solicited to contribute to the conference by submitting articles that illustrate research results, projects, surveying works and industrial experiences that describe significant advances in the following areas, but are not limited to that. </p>
-										<p><b>Call for Papers</b><br>
-										Authors are solicited to contribute to the conference by submitting articles that illustrate research results, projects, surveying works and industrial experiences that describe significant advances in the following areas, but are not limited to <br>
-										<br>
+
 										<strong>Information Security</strong><br>
 
 										• 	Information Security & Privacy   for Smart  Devices , Mobile & IoT Security<br>
@@ -196,7 +194,7 @@ International Conference on Emerging Trends in Engineering & Technology on Infor
 										<li><a href="cc.html">Conference Committee</a></li>
 										<li><a href="reg.html">Registration</a></li>
 										<li><a href="progs.html">Program Schedule</a></li>
-										<li><a href="cn.html">Conference News</a></li>
+
 										<li><a href="venue.html">Venue</a></li>
 										<li><a href="tat.html">Travel and Tourism</a></li>
 										<li><a href="visainfo.html">VISA Information</a></li>
@@ -239,7 +237,7 @@ International Conference on Emerging Trends in Engineering & Technology on Infor
 									<header class="major">
 										<h2>Get in touch</h2>
 									</header>
-									<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+
 									<ul class="contact">
 										<li class="fa-envelope-o"><a href="#">achamma.thomas@raisoni.net</a><br>
 										<a href="#">veena.gulhane@raisoni.net</a></li>
@@ -252,7 +250,8 @@ Nagpur-440016, Maharashtra, INDIA.</li>
 
 							<!-- Footer -->
 								<footer id="footer">
-									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+									<p class="copyright">Department of Computer Science & Engineering <br>
+© Copyright 2018. All rights reserved.</p>
 								</footer>
 
 						</div>
