--- a/pak.html
+++ b/pak.html
@@ -31,7 +31,7 @@ International Conference on Emerging Trends in Engineering & Technology on Infor
 											<h3 style="margin:0 0 0.5em 0">
 											International Conference on Emerging Trends in Engineering & Technology on Information Security and Analytics
 										</h3><p style="margin:0 0 0.75em 0; color:#f56a6a">Department of Computer Science & Engineering | G. H. Raisoni College of Engineering, Nagpur, India</p>
-										<i><p><b>01-02 June 2018</b></p></i>
+										<p><b>01-02 June 2018</b></p>
 
 										<hr>
 										<h3>PLENARY AND KEYNOTE</h3>
@@ -40,104 +40,40 @@ International Conference on Emerging Trends in Engineering & Technology on Infor
 
 									</header>
 
-										<center><p>WIP</p></center>
+									<section>
+
+										<div class="posts">
+											<article>
+												<a href="#" class="image"><img src="people/a.jpg" alt="" /></a>
+												<h3>Dr. Vitoantonio Bevilacqua<br>
+Polytechnic of Bari, Italy</h3>
+												<p style="text-align:justify">Vitoantonio Bevilacqua obtained the Laurea Degree in Electronic Engineering and the Ph.D. in Electrical Engineering from Polytechnic of Bari, where he is currently Tenured Professor of Human Computer Interaction at the Department of Electrical and Information Engineering and previously he also taught Expert Systems, Medical Informatics and Image Processing. Since 1996 he has been working and investigating in the field of computer vision and image processing, human-machine interaction, bioengineering, machine learning and soft computing (neural networks, evolutionary algorithms, hybrid expert systems, deep learning). The main applications of his research are in medicine, in biometry, in bioinformatics in ambient assisted living and industry. In 2000 he was involved as Visiting Researcher in an EC funded TMR (Trans-Mobility of Researchers) network (ERB FMRX-CT97-0127) called CAMERA (CAD Modeling Environment from Range Images) and worked in Manchester (UK) at UK Robotics Ltd, in the field of geometric feature extraction and 3D objects reconstruction. He has published more than 130 papers in refereed journals, books, international conferences proceedings and chaired several sessions such as Speech Recognition, Biomedical Informatics, Intelligent Image Processing and Bioinformatics in international conferences. On July 2011, he was invited as lecturer at International School on Medical Imaging using Bioinspired and Soft Computing-Miere (Spain) MIBISOC FP7-PEOPLE-ITN-2008. GA N. 238819— where presented his research on Intelligent Tumors Computer Aided Early Diagnosis and Therapy: Neural Network and Genetic Algorithms frameworks. In January 2015 he was qualified as Associate Professor of Information Processing Systems, in March 2017 as Associate Professor of Bioengineering and from April 2017 is the Head of Industrial Informatics Lab of the Department of Electrical and Information Engineering of Polytechnic University of Bari. </p>
+
+											</article>
+											<article>
+												<a href="#" class="image"><img src="people/b.jpg" alt="" /></a>
+												<h3>Dr. Stefan G. Mozor,<br>
+CEO Dynexsys Sydney, Australia.
+ </h3>
+												<p style="text-align:justify">Stefan obtained his engineering degrees from the University of New South Wales in Sydney, Australia, and his MBA is from University of Technology Sydney. He is a Fellow of the IEEE, and of the Institution of Engineers, Australia. He is a Chartered Professional Engineer. Stefan has extensive experience in industry and academia. He has held senior leadership roles in Technology companies, and has taught for a number of Australian, Asian, and British Universities. His work has resulted in inventions, patents, and publications. In R-10 he has lived and worked in Australia, China, Hong Kong, Singapore and worked on projects in India, Indonesia, Malaysia, Thailand, and Vietnam. He is the editor of the 6th edition of the McGraw-Hill Electronics Engineering Handbook to be released in 2017.
+</p>
+
+											</article>
+											<article>
+												<a href="#" class="image"><img src="people/c.jpg" alt="" /></a>
+												<h3>Prof. Raghu B. Korrapati<br>
+Walden University, USA </h3>
+												<p style="text-align:justify">Dr. Raghu Korrapati has 27 years of varied global business expertise. He has served in key management roles in India and the USA. In addition to being an active participant in the Information Technology industry, Dr. Korrapati also served as the Commissioner for Higher Education in South Carolina, USA, He is held in very high regard in industry circles for successfully implementing new software solutions and software product enhancements in the Financial Services/Insurance Sector and for constantly exceeding customer's expectations. Widely considered as a pioneer in sophisticated client-server and web-based technology, he has proven himself as a process-oriented leader whose ability to consistently create infrastructure and streamline operations has resulted in significant cost savings, increased quality, and increased profitability.</p>
+
+											</article>
+
+										</div>
+									</section>
 									</div>
 
 								</section>
 
-							<!-- Section --
-								<section>
-									<header class="major">
-										<h2>Erat lacinia</h2>
-									</header>
-									<div class="features">
-										<article>
-											<span class="icon fa-diamond"></span>
-											<div class="content">
-												<h3>Portitor ullamcorper</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											</div>
-										</article>
-										<article>
-											<span class="icon fa-paper-plane"></span>
-											<div class="content">
-												<h3>Sapien veroeros</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											</div>
-										</article>
-										<article>
-											<span class="icon fa-rocket"></span>
-											<div class="content">
-												<h3>Quam lorem ipsum</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											</div>
-										</article>
-										<article>
-											<span class="icon fa-signal"></span>
-											<div class="content">
-												<h3>Sed magna finibus</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											</div>
-										</article>
-									</div>
-								</section>
 
-							<!-- Section --
-								<section>
-									<header class="major">
-										<h2>Ipsum sed dolor</h2>
-									</header>
-									<div class="posts">
-										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
-											<h3>Interdum aenean</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-											<h3>Nulla amet dolore</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-											<h3>Tempus ullamcorper</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3>Sed etiam facilis</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3>Feugiat lorem aenean</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3>Amet varius aliquam</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-									</div>
-								</section> -->
 
 						</div>
 					</div>
@@ -161,7 +97,7 @@ International Conference on Emerging Trends in Engineering & Technology on Infor
 										<li><a href="cc.html">Conference Committee</a></li>
 										<li><a href="reg.html">Registration</a></li>
 										<li><a href="progs.html">Program Schedule</a></li>
-										<li><a href="cn.html">Conference News</a></li>
+
 										<li><a href="venue.html">Venue</a></li>
 										<li><a href="tat.html">Travel and Tourism</a></li>
 										<li><a href="visainfo.html">VISA Information</a></li>
@@ -216,7 +152,8 @@ Nagpur-440016, Maharashtra, INDIA.</li>
 
 							<!-- Footer -->
 								<footer id="footer">
-									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+									<p class="copyright">Department of Computer Science & Engineering <br>
+© Copyright 2018. All rights reserved.</p>
 								</footer>
 
 						</div>
