--- a/ps.html
+++ b/ps.html
@@ -45,7 +45,7 @@ International Conference on Emerging Trends in Engineering & Technology on Infor
 											<h3 style="margin:0 0 0.5em 0">
 											International Conference on Emerging Trends in Engineering & Technology on Information Security and Analytics
 										</h3><p style="margin:0 0 0.75em 0; color:#f56a6a">Department of Computer Science & Engineering | G. H. Raisoni College of Engineering, Nagpur, India</p>
-										<i><p><b>01-02 June 2018</b></p></i>
+										<p><b>01-02 June 2018</b></p>
 
 										<hr>
 										<h3>PAPER SUBMISSION</h3>
@@ -53,12 +53,11 @@ International Conference on Emerging Trends in Engineering & Technology on Infor
 										<hr>
 									</header>
 									<p>Authors are  invited to submit papers through easy chair conference management system (<a href="https://easychair.org/conferences/?conf=icisa2018"><b>https://easychair.org/conferences/?conf=icisa2018</b></a><u>)</u> by 15<sup>th</sup> Feb 2018. Submissions must be original and should  not have been published previously or be under consideration for publication while  being evaluated for this conference.
+<br>
+<br>All papers should be formatted as per the given format. <br>
 
-<br>All papers should be formatted as close  as possible to the final format (templates are available on this Web site for  your convenience). <br>
-
-Template:<strong>(<a href="springerformat.doc">Word  format</a>) </strong><br><br>
-
-Both regular (4-7 pages) papers for oral presentations are accepted. The regular papers may be extended up to a maximum of 8 pages, where a page charge of $20 per page would be levied for the additional pages beyond the regular limit of 7  <br><br>
+Template: <strong>(<a href="springerformat.doc">Word  format</a>) </strong><br><br>
+<br>
 
 									</div>
 
@@ -180,7 +179,7 @@ Both regular (4-7 pages) papers for oral presentations are accepted. The regular
 										<li><a href="cc.html">Conference Committee</a></li>
 										<li><a href="reg.html">Registration</a></li>
 										<li><a href="progs.html">Program Schedule</a></li>
-										<li><a href="cn.html">Conference News</a></li>
+
 										<li><a href="venue.html">Venue</a></li>
 										<li><a href="tat.html">Travel and Tourism</a></li>
 										<li><a href="visainfo.html">VISA Information</a></li>
@@ -223,7 +222,7 @@ Both regular (4-7 pages) papers for oral presentations are accepted. The regular
 									<header class="major">
 										<h2>Get in touch</h2>
 									</header>
-									<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+
 									<ul class="contact">
 										<li class="fa-envelope-o"><a href="#">achamma.thomas@raisoni.net</a><br>
 										<a href="#">veena.gulhane@raisoni.net</a></li>
@@ -236,7 +235,8 @@ Nagpur-440016, Maharashtra, INDIA.</li>
 
 							<!-- Footer -->
 								<footer id="footer">
-									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+									<p class="copyright">Department of Computer Science & Engineering <br>
+© Copyright 2018. All rights reserved.</p>
 								</footer>
 
 						</div>
