--- a/tat.html
+++ b/tat.html
@@ -31,7 +31,7 @@ International Conference on Emerging Trends in Engineering & Technology on Infor
 											<h3 style="margin:0 0 0.5em 0">
 											International Conference on Emerging Trends in Engineering & Technology on Information Security and Analytics
 										</h3><p style="margin:0 0 0.75em 0; color:#f56a6a">Department of Computer Science & Engineering | G. H. Raisoni College of Engineering, Nagpur, India</p>
-										<i><p><b>01-02 June 2018</b></p></i>
+										<p><b>01-02 June 2018</b></p>
 
 										<hr>
 										<h3>TRAVEL AND TOURISM</h3>
@@ -41,7 +41,61 @@ International Conference on Emerging Trends in Engineering & Technology on Infor
 									</header>
 
 
-										<center><p>WIP</p></center>
+									<table width="200" border="1">
+<tbody>
+	<center>
+	<tr>
+		<td><img src="travel/pe1.jpg" width="313" height="218" alt=""></td>
+		<td><img src="travel/pe2.jpg" width="325" height="221" alt=""></td>
+	</tr>
+	</center>
+</tbody></table>
+<strong>Pench National Park </strong><br>
+Pench National Park is situated in Seoni and Chhindwara districts of Madhya Pradesh in India. It derives its name from the Pench River that flows through the national park from north to south dividing the park into almost equal western and eastern halves, the well forested areas of Seoni and Chhindwara districts respectively. It was declared a sanctuary in 1977 but raised to the status of national park in 1983. In 1992, it was established as a Tiger Reserve. The park is famous for rafting. In 2011 the park won the Best Management Award. This park is accessible from Pauni on National Highway 7 and has two famous gates as tourists entry, Turiya and Karmajhiri.
+
+<table width="200" border="1">
+<tbody><tr>
+		<td><img src="travel/ng1.jpg" width="313" height="218" alt=""></td>
+		<td><img src="travel/ng2.jpg" width="325" height="221" alt=""></td>
+	</tr>
+</tbody></table>
+<strong>Nagzira Wildlife Sanctuary</strong><br>
+	Nagzira wildlife sanctuary is located between Bhandara district and Gondia district of Maharashtra at. Nagzira Wildlife Sanctuary is locked in the arms of nature and adorned with a picturesque landscape, luxuriant vegetation and serves as a living outdoor museum to explore and appreciate nature. This sanctuary has a number of fish, 34 species of mammals, 166 species of birds, 36 species of reptiles and four species of amphibians.The invertebrate fauna includes, besides a number of insects and ant species. Wild animals found here are the tiger, bison, sambar, nilgai, chital, wild boar, sloth bear, Barking Deers, Mouse Deers and wild dog. Nearly 30,000 tourists visits this sanctuary annually. Wild animals to spot are the tiger, panther, bison, sambar, nilgai, chital, wild boar, sloth bear and wild dog.
+<table width="200" border="1">
+	<tbody><tr>
+		<td><img src="travel/td1.jpg" width="338" height="223" alt=""></td>
+		<td><img src="travel/td2.jpg" width="307" height="222" alt=""></td>
+	</tr>
+</tbody></table>
+<p><strong>Tadoba Tiger Reserve</strong><br>
+	Tadoba Andhari Tiger Reserve is one of the finest & largest National Parks in Maharashtra. It is one of India’s 47 project tiger reserves existing in India. It lies in Chandrapur district of Maharashtra state. This beautiful wild paradise is situated 45 km close to Chandrapur District of central Indian State Maharashtra, and is about 150 km from Nagpur city which is the nearest airport for visiting Tadoba national park. Its name 'Tadoba' is derived from the name of God "Tadoba" or "Taru" whiich is praised by local tribal people, whereas "Andhari" is derived from name of Andhari river. It is believed that Taru was the village chief who was killed in an fierce encounter with Tiger and thus a shrine was made in remembrance of God Taru. This region was predominantly ruled by Gond tribes which had their own Kingdom in large area of Central India. Their descendents are still can be seen in local villages.</p>
+<table width="200" border="1">
+	<tbody><tr>
+		<td><img src="travel/nv1.jpg" width="374" height="238" alt=""></td>
+		<td><img src="travel/nv2.jpg" width="268" height="230" alt=""></td>
+	</tr>
+</tbody></table>
+<p><strong>Navegaon National Park</strong> <br>Navegaon National Park is a national park located in the Gondia district of Maharashtra, India. Navegaon, a popular forest resort in the Vidarbha region, the easternmost part of Maharashtra, was built in the 18th century. The picturesque lake set amidst lush green hills at Navegaon, has a watch-tower beside it. One can get a bird's eye view of the surrounding forest and marvel at the exciting wildlife from the watch-tower which consists of a deer park, Dr. Salem bird sanctuary, and three exotic gardens. The Dr Salim Ali Bird Sanctuary, Navegaon is home to almost 60% of the bird species found in entire Maharashtra. Every winter, flocks of beautiful migratory birds visit the lake—a rare treat for the eyes. </p>
+<table width="200" border="1">
+	<tbody><tr>
+		<td><img src="travel/rm1.jpg" width="330" height="232" alt=""></td>
+		<td><img src="travel/rm2.jpg" width="302" height="229" alt=""></td>
+	</tr>
+</tbody></table>
+<p><strong>Ramtek</strong><br>
+		Ramtek has got Historic temple of lord Rama. It is believed that Ramtek was the place where Rama, the Hindu god, rested while he was in exile. Legend has it that the aashram of great Hindu sage Agastya was situated close to Ramtek. While the sages performed religious rites, the demons used to disrupt their activities and slayed a great number of holy men. Lord Rama was distressed to hear about this, and took a vow to relieve the world from the demons. 'Tek' means vow in local language, hence the word Ramtek comes from 'Vow of Ram'. Thus it is believed locally that whoever takes a vow at Ramtek is blessed by the gods for its fulfillment. The 'padukas' of Lord Ram are believed to have been worshipped here for centuries.</p>
+<table width="200" border="1">
+	<tbody><tr>
+		<td><img src="travel/kh1.jpg" width="350" height="244" alt=""></td>
+		<td><img src="travel/kh2.jpg" width="283" height="251" alt=""></td>
+	</tr>
+</tbody></table>
+	<p><strong>Khindsi Lake Ramtek</strong>
+Khindsi Lake is a lake near the city of Ramtek in the Nagpur district of India. Boating, Watersports, restaurant and resort is operated by Rajkamal Tourism and Olive Resorts at Khindsi lake. It is central India's largest boating center and amusement park with lakhs of tourists visiting every year.</p>
+
+
+
+
 									</div>
 
 								</section>
@@ -162,7 +216,7 @@ International Conference on Emerging Trends in Engineering & Technology on Infor
 										<li><a href="cc.html">Conference Committee</a></li>
 										<li><a href="reg.html">Registration</a></li>
 										<li><a href="progs.html">Program Schedule</a></li>
-										<li><a href="cn.html">Conference News</a></li>
+
 										<li><a href="venue.html">Venue</a></li>
 										<li><a href="tat.html">Travel and Tourism</a></li>
 										<li><a href="visainfo.html">VISA Information</a></li>
@@ -205,7 +259,7 @@ International Conference on Emerging Trends in Engineering & Technology on Infor
 									<header class="major">
 										<h2>Get in touch</h2>
 									</header>
-									<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+
 									<ul class="contact">
 										<li class="fa-envelope-o"><a href="#">achamma.thomas@raisoni.net</a><br>
 										<a href="#">veena.gulhane@raisoni.net</a></li>
@@ -218,7 +272,8 @@ Nagpur-440016, Maharashtra, INDIA.</li>
 
 							<!-- Footer -->
 								<footer id="footer">
-									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+									<p class="copyright">Department of Computer Science & Engineering <br>
+© Copyright 2018. All rights reserved.</p>
 								</footer>
 
 						</div>
