--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@ International Conference on Emerging Trends in Engineering & Technology on Infor
 											<h3 style="margin:0 0 0.5em 0">
 											International Conference on Emerging Trends in Engineering & Technology on Information Security and Analytics
 										</h3><p style="margin:0 0 0.75em 0; color:#f56a6a">Department of Computer Science & Engineering | G. H. Raisoni College of Engineering, Nagpur, India</p>
-										<i><p><b>01-02 June 2018</b></p></i>
+										<p><b>01-02 June 2018</b></p>
 
 										<hr>
 										<h3>CONTACT</h3>
@@ -41,19 +41,23 @@ International Conference on Emerging Trends in Engineering & Technology on Infor
 									</header>
 
 
-<p>Correspondence Address:<br>
+<p><b>Correspondence Address:</b><br>
 G.H.RAISONI COLLEGE OF ENGINEERING, NAGPUR<br>
 CRPF Gate-3, Digdoh Hills, Hingna Road,<br>
 Nagpur-440016, Maharashtra, INDIA.<br>
 Tel: +91-7104-236383 Fax- +91-7104-232560.<br>
 College Website: ghrce.raisoni.net<br>
+
 <br>
+<b>Conference Website:</b> <br>
+<a href="ghrce.raisoni.net/icisa">ghrce.raisoni.net/icisa</a><br>
+
 <br>
-Conference Website: ghrce.raisoni.net/icisa<br>
-<br>
-<br>
-E-mail : achamma.thomas@raisoni.net ( 09822222544 )<br>
-veena.gulhane@raisoni.net (9822273858 )</P>
+<b>Contact Information</b> <br>
+achamma.thomas@raisoni.net (09822222544)<br>
+veena.gulhane@raisoni.net (9822273858) <br>
+umesh.sakhare@raisoni.net (8983272294)) <br>
+sonali.nimbhorkar@raisoni.net (962360264)</P>
 
 									</div>
 
@@ -175,7 +179,7 @@ veena.gulhane@raisoni.net (9822273858 )</P>
 										<li><a href="cc.html">Conference Committee</a></li>
 										<li><a href="reg.html">Registration</a></li>
 										<li><a href="progs.html">Program Schedule</a></li>
-										<li><a href="cn.html">Conference News</a></li>
+
 										<li><a href="venue.html">Venue</a></li>
 										<li><a href="tat.html">Travel and Tourism</a></li>
 										<li><a href="visainfo.html">VISA Information</a></li>
@@ -218,7 +222,7 @@ veena.gulhane@raisoni.net (9822273858 )</P>
 									<header class="major">
 										<h2>Get in touch</h2>
 									</header>
-									<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+
 									<ul class="contact">
 										<li class="fa-envelope-o"><a href="#">achamma.thomas@raisoni.net</a><br>
 										<a href="#">veena.gulhane@raisoni.net</a></li>
@@ -231,7 +235,8 @@ Nagpur-440016, Maharashtra, INDIA.</li>
 
 							<!-- Footer -->
 								<footer id="footer">
-									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+									<p class="copyright">Department of Computer Science & Engineering <br>
+© Copyright 2018. All rights reserved.</p>
 								</footer>
 
 						</div>
