--- a/venue.html
+++ b/venue.html
@@ -12,7 +12,11 @@ International Conference on Emerging Trends in Engineering & Technology on Infor
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" href="assets/css/main.css" />
+
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
@@ -31,7 +35,7 @@ International Conference on Emerging Trends in Engineering & Technology on Infor
 											<h3 style="margin:0 0 0.5em 0">
 											International Conference on Emerging Trends in Engineering & Technology on Information Security and Analytics
 										</h3><p style="margin:0 0 0.75em 0; color:#f56a6a">Department of Computer Science & Engineering | G. H. Raisoni College of Engineering, Nagpur, India</p>
-										<i><p><b>01-02 June 2018</b></p></i>
+										<p><b>01-02 June 2018</b></p>
 
 										<hr>
 										<h3>VENUE</h3>
@@ -47,7 +51,7 @@ Nagpur-440016, Maharashtra, INDIA.
 </p>
 
 <h2>About Nagpur</h2>
-<p>Nagpur the second capital of Maharashtra, India, is uniquely situated in the geographical centre of India. The zero Milestone of India is in this city.  It enjoys excellent connectivity to rest of the country through three National Highways as well as by rail and air connections to major cities of the country.  It has generally a dry tropical weather. The monsoon starts in the month of June and extends upto September. In July, due to rainy season,  the temperature  is  around 30-35° C. Rich in agriculture and horticulture produce,  Nagpur is famous for its oranges and is also known as 'Orange City'. Huge coal and mineral deposits exist in this region along with some of the best infrastructure in the form of educational institutions, health facilities and a five star Industrial area at Butibori, the largest in Asia. Nagpur, The second greenest city in India has a plethora of tourists spots for the wildlife enthusiastic like the Dr Salim Ali National Bird Sanctuary at Nawegaon, Tiger Parks at Pench and Tadoba and picturesque treks to the Satpuda mountains. There are three huge aqua parks.  Nagpur also boasts of a cosmopolitan populace, luxurious hotels & restaurants. As the nerve centre of Vidarbha,  Nagpur pulsates with a unique blend of new and old tradition and heritage. The recent advancement in Nagpur is a MIHAN, a Multi-modal International Hub Airport at Nagpur, the work for which has just begin, which is attracting many business persons across the World, as it has acquired a status of "First City" in India in infrastructure development.</p>
+<p style="text-align:justify">Nagpur the second capital of Maharashtra, India, is uniquely situated in the geographical centre of India. The zero Milestone of India is in this city.  It enjoys excellent connectivity to rest of the country through three National Highways as well as by rail and air connections to major cities of the country.  It has generally a dry tropical weather. The monsoon starts in the month of June and extends upto September. In July, due to rainy season,  the temperature  is  around 30-35° C. Rich in agriculture and horticulture produce,  Nagpur is famous for its oranges and is also known as 'Orange City'. Huge coal and mineral deposits exist in this region along with some of the best infrastructure in the form of educational institutions, health facilities and a five star Industrial area at Butibori, the largest in Asia. Nagpur, The second greenest city in India has a plethora of tourists spots for the wildlife enthusiastic like the Dr Salim Ali National Bird Sanctuary at Nawegaon, Tiger Parks at Pench and Tadoba and picturesque treks to the Satpuda mountains. There are three huge aqua parks.  Nagpur also boasts of a cosmopolitan populace, luxurious hotels & restaurants. As the nerve centre of Vidarbha,  Nagpur pulsates with a unique blend of new and old tradition and heritage. The recent advancement in Nagpur is a MIHAN, a Multi-modal International Hub Airport at Nagpur, the work for which has just begin, which is attracting many business persons across the World, as it has acquired a status of "First City" in India in infrastructure development.</p>
 
 <h2>Getting from the Airport to Conference Venue</h2>
 <p>From Nagpur Airport: Please take a taxi to the GHRCE Autonomous campus. It may take 30 minutes from Airport, Nagpur.</p>
@@ -182,7 +186,7 @@ Nagpur-440016, Maharashtra, INDIA.
 										<li><a href="cc.html">Conference Committee</a></li>
 										<li><a href="reg.html">Registration</a></li>
 										<li><a href="progs.html">Program Schedule</a></li>
-										<li><a href="cn.html">Conference News</a></li>
+
 										<li><a href="venue.html">Venue</a></li>
 										<li><a href="tat.html">Travel and Tourism</a></li>
 										<li><a href="visainfo.html">VISA Information</a></li>
@@ -225,7 +229,7 @@ Nagpur-440016, Maharashtra, INDIA.
 									<header class="major">
 										<h2>Get in touch</h2>
 									</header>
-									<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+
 									<ul class="contact">
 										<li class="fa-envelope-o"><a href="#">achamma.thomas@raisoni.net</a><br>
 										<a href="#">veena.gulhane@raisoni.net</a></li>
@@ -238,7 +242,8 @@ Nagpur-440016, Maharashtra, INDIA.</li>
 
 							<!-- Footer -->
 								<footer id="footer">
-									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+									<p class="copyright">Department of Computer Science & Engineering <br>
+© Copyright 2018. All rights reserved.</p>
 								</footer>
 
 						</div>
